--- a/src/App.scss
+++ b/src/App.scss
@@ -35,7 +35,7 @@
 
 html{
   box-sizing: border-box;
-  font-size: 0px;
+  //font-size: 0px;
   overflow: auto;
   margin: auto;
   overflow-x: hidden;
@@ -49,5 +49,5 @@ html{
   -webkit-text-stroke: .025em rgba(51,51,51,0.1);
   
   box-sizing: border-box;
-  font-size: 0px;
+  //font-size: 0px;
 }
