completed data table

--- a/src/styles/pages/Map.module.scss
+++ b/src/styles/pages/Map.module.scss
@@ -4,6 +4,7 @@
   padding: 6px;
   border: 1px solid grey;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .cluster{
@@ -13,4 +14,5 @@
   border: 1px solid grey;
   cursor: pointer;
   border-radius: 4px;
+  font-weight: bold;
 }
