--- a/src/styles/components/Chart.module.scss
+++ b/src/styles/components/Chart.module.scss
@@ -1,7 +1,9 @@
 .body{
-  flex: 1;
+  flex-basis: calc(50% - 20px);
   padding: 20px;
   margin-bottom: 20px;
   border: 1px solid #E1E1E1;
   border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.06), 0 1px 2px rgba(0,0,0,0.12);
+  cursor: pointer;
 }
