--- a/src/styles/components/MapOverlay.module.scss
+++ b/src/styles/components/MapOverlay.module.scss
@@ -1,12 +1,40 @@
 .body{
-  width: 300px;
-  height: 150px;
-  margin: 20px;
-  padding: 20px;
   position: absolute;
   top: 0;
   right: 0;
   z-index: 5;
+}
+
+.filter{
+  width: 300px;
+  height: 150px;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 8px;
+  backdrop-filter: blur(8px);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.06), 0 1px 2px rgba(0,0,0,0.12);
+  background-color: rgba(255, 255, 255, 0.15);
+
+  .title{
+    font-size: 18px;
+    font-weight: 300;
+  }
+
+  .picker{
+    font-size: 14px;
+    padding-top: 10px;
+
+    span{
+      width: 80px;
+    }
+  }
+}
+
+.display{
+  width: 300px;
+  height: 150px;
+  margin: 20px;
+  padding: 20px;
   border-radius: 8px;
   backdrop-filter: blur(8px);
   box-shadow: 0 1px 3px rgba(0,0,0,0.06), 0 1px 2px rgba(0,0,0,0.12);
