--- a/src/styles/pages/Visualizations.module.scss
+++ b/src/styles/pages/Visualizations.module.scss
@@ -1,8 +1,20 @@
 .body{
   flex: 1;
   display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.hint{
+  margin-bottom: 20px;
+  color: #888888;
+  font-size: 15px;
+}
+
+.charts{
+  flex: 1;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 20px;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
