--- a/src/styles/components/MapOverlay.module.scss
+++ b/src/styles/components/MapOverlay.module.scss
@@ -7,7 +7,7 @@
 
 .filter{
   width: 300px;
-  height: 150px;
+  //height: 150px;
   margin: 20px;
   padding: 20px;
   border-radius: 8px;
@@ -28,29 +28,14 @@
       width: 80px;
     }
   }
-}
 
-.display{
-  width: 300px;
-  height: 150px;
-  margin: 20px;
-  padding: 20px;
-  border-radius: 8px;
-  backdrop-filter: blur(8px);
-  box-shadow: 0 1px 3px rgba(0,0,0,0.06), 0 1px 2px rgba(0,0,0,0.12);
-  background-color: rgba(255, 255, 255, 0.15);
-
-  .title{
+  .name{
     font-size: 18px;
     font-weight: 300;
+    margin: 24px 0px 10px 0px;
   }
 
-  .picker{
-    font-size: 14px;
-    padding-top: 10px;
-
-    span{
-      width: 80px;
-    }
+  .field{
+    font-size: 15px;
   }
 }
