--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -2,12 +2,12 @@
   width: 340px;
   height: 100vh;
   background-color: #F1F1F4;
-  padding: 24px;
 
   .title{
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 4px;
+    padding: 24px 24px 0px 24px;
   }
 
   .subtitle{
@@ -15,13 +15,23 @@
     font-weight: 400;
     margin-bottom: 32px;
     color: #959595;
+    padding: 0px 24px 0px 24px;
   }
 
   .label{
     font-weight: 500;
     font-size: 18px;
-    line-height: 30px;
-    margin-top: 10px;
+    line-height: 40px;
     cursor: pointer;
+    padding: 0px 24px 0px 24px;
+  }
+
+  .sLabel{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 40px;
+    cursor: pointer;
+    background-color: #E6E6EA;
+    padding: 0px 24px 0px 24px;
   }
 }
