--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -2,6 +2,9 @@
   width: 340px;
   height: 100vh;
   background-color: #F1F1F4;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 
   .title{
     font-size: 20px;
